src/components/Cards/Story/Story.scss
@import "../../../styles/colors.scss";
@import "../../../styles/mixins.scss";
@import "../../../styles/breakpoints.scss";
@import "../../../styles/fonts.scss";

.story-card {
  @include story-text;
  max-width: 380px;
  margin: space(20);
  padding: space(32) space(24);
  background-color: $light-turqoise;
  color: $grey;
  cursor: pointer;

  &:nth-of-type(even) {
    background-color: $light-grey;
  }

  &:hover {
    transform: scale(1.1);
  }

  @include for-tablet-large-down {
    padding: space(24) space(16) space(16);
    margin: space(20) auto;
  }

  @include for-tablet-large-up {
    min-width: pxtorem(380px);
  }

  &--read-more {
    @include pagination;
    margin-top: space(12);
    color: $turqoise;
  }

  &--tags {
    margin: space(24) 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: center;

    &--tag {
      margin: pxtorem(4px);
    }

    &--title {
      @include body-xs;
    }
  }

  &--excerpt {
    min-height: pxtorem(99px);
  }
}

